# django-pendulum-field

./: .flake8  .gitignore  README.md  manage.py  pyproject.toml  test_setting.py
django_pendulum_field/: form.py  model.py
test_app/: forms.py  models.py  tests.py
test_app/migrations/: 0001_initial.py
